[package]
name = "crack_tool_cisco_ospf_md5"
version = "1.0.0"             # Package version.
authors = ["Kurt Fuchs <contact@fuchskurt.eu>"]  # Package author(s).
edition = "2024"              # The Rust edition used for this package.
license = "GPL-3"

[dependencies]
md5 = "0.8.0"
pcap-file = "3.0.0-rc1"
rayon = "1.11.0"
eframe = "0.33.2"
rfd = "0.15.4"

[profile.dev]
panic = "abort"               # Abort on panic.
codegen-units = 1             # Use a single code generation unit for better optimizations.
lto = "fat"                   # Use "fat" LTO for maximum optimizations.
opt-level = 3                 # Maximum optimization level.
debug = 0

[profile.release]
panic = "abort"               # Abort on panic.
codegen-units = 1             # Use a single code generation unit for better optimizations.
lto = "fat"                   # Use "fat" LTO for maximum optimizations.
opt-level = 3                 # Maximum optimization level.
